MVVMLight, nuget, and LightMode added
Added MVVMLight package support and support for nuget. Added that
awesome flag that lets you use light mode.

--- a/RedditStoreApp/MainPage.xaml
+++ b/RedditStoreApp/MainPage.xaml
@@ -5,9 +5,10 @@
     xmlns:local="using:RedditStoreApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
     mc:Ignorable="d">
 
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock x:Name="TestBlock" Text="This is a test" />
+        <TextBlock x:Name="TestBlock" Text="{Binding HelloString}" />
     </Grid>
 </Page>
