--- a/RedditStoreApp/App.xaml
+++ b/RedditStoreApp/App.xaml
@@ -1,20 +1,19 @@
-﻿<Application
-    x:Class="RedditStoreApp.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RedditStoreApp">
-
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-
-                <!-- 
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Application x:Class="RedditStoreApp.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:RedditStoreApp" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:vm="using:RedditStoreApp.ViewModel" mc:Ignorable="d"
+             RequestedTheme="Light">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <!-- 
                     Styles that define common aspects of the platform look and feel
                     Required by Visual Studio project and item templates
                  -->
-                <ResourceDictionary Source="Common/StandardStyles.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-
-        </ResourceDictionary>
-    </Application.Resources>
+        <ResourceDictionary Source="Common/StandardStyles.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
