--- a/RedditStoreApp/MainPage.xaml
+++ b/RedditStoreApp/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp"
+    xmlns:co="using:Callisto.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
@@ -13,6 +14,9 @@
             <ColumnDefinition Width="300" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="TestBlock" Text="{Binding HelloString}" />
+        <Grid>
+            <TextBlock x:Name="TestBlock" Text="{Binding HelloString}" />
+        </Grid>
+        
     </Grid>
 </Page>
