--- a/RedditStoreApp/App.xaml
+++ b/RedditStoreApp/App.xaml
@@ -4,16 +4,19 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:vm="using:RedditStoreApp.ViewModel" mc:Ignorable="d"
              RequestedTheme="Light">
-  <Application.Resources>
-    <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <!-- 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- 
                     Styles that define common aspects of the platform look and feel
                     Required by Visual Studio project and item templates
                  -->
-        <ResourceDictionary Source="Common/StandardStyles.xaml" />
-      </ResourceDictionary.MergedDictionaries>
-      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
-    </ResourceDictionary>
-  </Application.Resources>
+                <ResourceDictionary Source="Common/StandardStyles.xaml" />
+                
+                <!-- Our custom appplication-specific styles. -->
+                <ResourceDictionary Source="Common/ThemeStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
