--- a/RedditStoreApp/Common/Strings.xaml
+++ b/RedditStoreApp/Common/Strings.xaml
@@ -2,7 +2,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.Common">
-
     <x:String x:Key="Username">Username</x:String>
+    <x:String x:Key="Password">Password</x:String>
+    <x:String x:Key="LoginHeader">Login with your Reddit Account.</x:String>
+    <x:String x:Key="AuthedHeader">Welcome {0}! You are currently logged in.</x:String>
+    <x:String x:Key="LoginText">Login with your Reddit account to post comments, access your custom list of subreddits, and send and receive messages from other users.</x:String>
+    <x:String x:Key="AuthedText">Your username and password are stored securely. You may clear them at anytime and sign into a different account by logging out.</x:String>
     
+    <x:String x:Key="LoginBtn_Login">Login</x:String>
+    <x:String x:Key="LoginBtn_Logout">Logout and Clear</x:String>
+    <x:String x:Key="LoginBtn_InProgress">Logging In...</x:String>
 </ResourceDictionary>
