--- a/RedditStoreApp/SettingsFlyoutView.xaml
+++ b/RedditStoreApp/SettingsFlyoutView.xaml
@@ -36,21 +36,18 @@
                 <Grid Margin="40,33,40,39" VerticalAlignment="Top" Grid.RowSpan="3">
                     <StackPanel x:Name="FlyoutContent">
                         <StackPanel x:Name="LoggedOutStackPanel" Margin="0, 39, 0, 0">
-                            <TextBlock FontWeight="Bold" Text="Login With Your Account" TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
-                            <TextBlock Text="Login with your Reddit account to post comments, access your custom list of subreddits, and send and receive messages from other users." TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
-
-                            <!-- TextBlock FontWeight="Bold" Text="Welcome, wastingtime1! You Are Currently Logged In." TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
-                            <TextBlock Text="Your username and password are stored securely. You may clear them at anytime and sign into a different account by logging out." TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/> -->
+                            <TextBlock FontWeight="Bold" Text="{Binding LoginHeader}" TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
+                            <TextBlock Text="{Binding LoginText}" TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
 
                             <TextBlock Margin="0,25, 0, 0" Text="{StaticResource Username}" TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
-                            <TextBox HorizontalAlignment="Left" Width="250"/>
+                            <TextBox HorizontalAlignment="Left" Width="250" Text="{Binding Username, Mode=TwoWay}" IsEnabled="{Binding IsFormEditable}" />
                             
                             <TextBlock Margin="0,25, 0, 0" Text="{StaticResource Password}" TextWrapping="Wrap" Style="{StaticResource BasicTextStyle}" HorizontalAlignment="Left"/>
-                            <PasswordBox  HorizontalAlignment="Left" Width="250"/>
+                            <PasswordBox  HorizontalAlignment="Left" Width="250" Password="{Binding Password, Mode=TwoWay}" IsEnabled="{Binding IsFormEditable}" />
                           
-                            <StackPanel Orientation="Horizontal">
-                                <Button Margin="0,25 0, 0" Content="Login" />
-                                <ProgressRing  />
+                            <StackPanel Orientation="Horizontal" Margin="0,25 0, 0">
+                                <Button Command="{Binding Login}" Margin="0,0 0, 0" Content="{Binding LoginButtonText}" />
+                                <ProgressRing IsActive="{Binding IsProcessing}" />
                             </StackPanel>
                         </StackPanel>
                     </StackPanel>
