Added error text attribs and color.

--- a/RedditStoreApp/Common/ThemeStyles.xaml
+++ b/RedditStoreApp/Common/ThemeStyles.xaml
@@ -102,4 +102,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+    <Style x:Key="ErrorTextStyle" TargetType="TextBlock" BasedOn="{StaticResource BasicTextStyle}">
+        <Setter Property="Foreground" Value="{StaticResource RedditError}" />
+    </Style>
 </ResourceDictionary>
