--- a/RedditStoreApp/Common/Brushes.xaml
+++ b/RedditStoreApp/Common/Brushes.xaml
@@ -6,7 +6,9 @@
     <Color x:Key="RedditOrange">#FF4500</Color>
     <Color x:Key="RedditDarkBlue">#336699</Color>
     <Color x:Key="RedditDarkBackground">#C6C6C6</Color>
-    
+    <Color x:Key="RedditError">#FF1111</Color>    
+
+    <SolidColorBrush x:Key="ErrorTextBrush" Color="{StaticResource RedditError}" />
     <SolidColorBrush x:Key="HeaderBrush" Color="{StaticResource RedditBlue}" />
     <SolidColorBrush x:Key="FlyoutHeaderBrush" Color="{StaticResource RedditDarkBlue}" />
     <SolidColorBrush x:Key="MainBackgroundBrush" Color="White" />
