--- a/RedditStoreApp/SettingsFlyoutView.xaml
+++ b/RedditStoreApp/SettingsFlyoutView.xaml
@@ -26,7 +26,7 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="40, 32, 17, 13">
-                    <Button  Margin="0,3,0,0"  Style="{StaticResource SettingsBackButtonStyle}"/>
+                    <Button  Margin="0,3,0,0" Click="Button_Click_1" Style="{StaticResource SettingsBackButtonStyle}"/>
                     <TextBlock Margin="10,0,0,0" FontFamily="Segoe UI" FontWeight="SemiLight" FontSize="24.6667" Text="Settings" Foreground="White"/>
                 </StackPanel>
             </Grid>
