--- a/RedditStoreApp/MainPage.xaml
+++ b/RedditStoreApp/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp"
+    xmlns:view="using:RedditStoreApp.View"
     xmlns:co="using:Callisto.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,11 +13,15 @@
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300" />
-            <ColumnDefinition />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid>
-            <TextBlock x:Name="TestBlock" Text="{Binding HelloString}" />
+            <StackPanel>
+                <TextBlock x:Name="TestBlock" Text="{Binding HelloString}" />
+                <Button Content="Load a subreddit" Command="{Binding TestAction}" />
+            </StackPanel>
         </Grid>
-        
+
+        <Frame Grid.Column="1" SourcePageType="view:LinkListView" />
     </Grid>
 </Page>
