--- a/RedditStoreApp/View/SettingsFlyoutView.xaml
+++ b/RedditStoreApp/View/SettingsFlyoutView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="RedditStoreApp.SettingsFlyoutView"
+    x:Class="RedditStoreApp.View.SettingsFlyoutView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp"
