--- a/RedditStoreApp/View/LinkListView.xaml
+++ b/RedditStoreApp/View/LinkListView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
+    xmlns:converters="using:RedditStoreApp.View.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     DataContext="{Binding Source={StaticResource Locator}, Path=Main.CurrentSubreddit}"
@@ -10,18 +11,24 @@
     d:DesignWidth="400"
     mc:Ignorable="d" Margin="0">
 
+    <Page.Resources>
+        <converters:SortValueConverter x:Key="SortValueConverter"/>
+    </Page.Resources>
+
     <StackPanel Background="{StaticResource DarkBackgroundBrush}">
         <Grid Height="40" Margin="20,10,0,20">
          <StackPanel>
             <TextBlock Text="{Binding DisplayName}" Style="{StaticResource SubheaderTextStyle}"/>
             <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
         </StackPanel>
-        <ComboBox HorizontalAlignment="Right" Height="Auto" SelectedIndex="0" Width="100" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0">
-            <ComboBoxItem>Hot</ComboBoxItem>
-            <ComboBoxItem>New</ComboBoxItem>
-            <ComboBoxItem>Top</ComboBoxItem>
-            <ComboBoxItem>Contro.</ComboBoxItem>
-        </ComboBox>           
+            <ComboBox HorizontalAlignment="Right" Height="Auto" Width="150" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
+                  ItemsSource="{Binding SortValues}" SelectedItem="{Binding CurrentSort, Mode=TwoWay}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock HorizontalAlignment="Right" Text="{Binding Converter={StaticResource SortValueConverter}}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </Grid>
         <ListView>
 
