--- a/RedditStoreApp/App.xaml
+++ b/RedditStoreApp/App.xaml
@@ -2,7 +2,7 @@
 <Application x:Class="RedditStoreApp.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:RedditStoreApp" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:vm="using:RedditStoreApp.ViewModel" mc:Ignorable="d"
+             xmlns:vm="using:RedditStoreApp.ViewModels" mc:Ignorable="d"
              RequestedTheme="Light">
     <Application.Resources>
         <ResourceDictionary>
