--- a/RedditStoreApp/View/LinkListView.xaml
+++ b/RedditStoreApp/View/LinkListView.xaml
@@ -8,7 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     DataContext="{Binding Source={StaticResource Locator}, Path=Main.CurrentSubreddit}"
     d:DesignHeight="768"
-    d:DesignWidth="400"
+    d:DesignWidth="470"
     mc:Ignorable="d" Margin="0">
 
     <Page.Resources>
@@ -16,13 +16,18 @@
     </Page.Resources>
 
     <StackPanel Background="{StaticResource DarkBackgroundBrush}">
-        <Grid Height="40" Margin="20,10,0,20">
-         <StackPanel Orientation="Horizontal">
-                <ProgressRing IsActive="{Binding IsLoading}" />
-                <TextBlock Text="{Binding DisplayName}" Style="{StaticResource SubheaderTextStyle}"/>
-            <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
-        </StackPanel>
-            <ComboBox HorizontalAlignment="Right" Height="Auto" Width="150" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
+        <Grid Height="60" Margin="20,10,0,20">
+            <StackPanel Orientation="Horizontal">
+                <Button VerticalAlignment="Center" Style="{StaticResource BackButtonStyle}" Margin="0,0,10,0" RenderTransformOrigin="0.5,0.5">
+                    <!--<Button.RenderTransform>
+                        <RotateTransform Angle="180"/>
+                    </Button.RenderTransform>-->
+                </Button>
+                <TextBlock VerticalAlignment="Center" Text="programming" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
+                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding IsLoading}" />
+            </StackPanel>
+            <ComboBox VerticalAlignment="Center" Margin="0,18,0,0" HorizontalAlignment="Right" Height="Auto" Width="138" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
                   ItemsSource="{Binding SortValues}" SelectedItem="{Binding CurrentSort, Mode=TwoWay}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
