--- a/RedditStoreApp/View/LinkListView.xaml
+++ b/RedditStoreApp/View/LinkListView.xaml
@@ -3,10 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
+    xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:converters="using:RedditStoreApp.View.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    DataContext="{Binding Source={StaticResource Locator}, Path=Main.CurrentSubreddit}"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
     d:DesignHeight="768"
     d:DesignWidth="470"
     mc:Ignorable="d" Margin="0">
@@ -18,17 +19,13 @@
     <StackPanel Background="{StaticResource DarkBackgroundBrush}">
         <Grid Height="60" Margin="20,10,0,20">
             <StackPanel Orientation="Horizontal">
-                <Button VerticalAlignment="Center" Style="{StaticResource BackButtonStyle}" Margin="0,0,10,0" RenderTransformOrigin="0.5,0.5">
-                    <!--<Button.RenderTransform>
-                        <RotateTransform Angle="180"/>
-                    </Button.RenderTransform>-->
-                </Button>
+                <lctrls:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="{Binding IsLeft}" />
                 <TextBlock VerticalAlignment="Center" Text="programming" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
                 <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
-                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding IsLoading}" />
+                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
             </StackPanel>
             <ComboBox VerticalAlignment="Center" Margin="0,18,0,0" HorizontalAlignment="Right" Height="Auto" Width="138" Background="{StaticResource DarkBackgroundBrush}" BorderThickness="0"
-                  ItemsSource="{Binding SortValues}" SelectedItem="{Binding CurrentSort, Mode=TwoWay}">
+                  ItemsSource="{Binding CurrentSubreddit.SortValues}" SelectedItem="{Binding CurrentSubreddit.CurrentSort, Mode=TwoWay}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock HorizontalAlignment="Right" Text="{Binding Converter={StaticResource SortValueConverter}}"/>
@@ -36,7 +33,7 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </Grid>
-        <ListView ItemsSource="{Binding Posts}">
+        <ListView ItemsSource="{Binding CurrentSubreddit.Posts}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Title}"/>
