--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -10,6 +10,16 @@
     d:DeightHeight="786">
 
     <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+     <StackPanel Margin="20,10,20,10">
+        <Grid Height="60" Margin="0,0,0,20">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock VerticalAlignment="Center" Text="subreddits" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
+                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
+            </StackPanel>
 
+        </Grid>
+            
+        </StackPanel>
     </Grid>
 </Page>
