--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -18,15 +18,15 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" Text="subreddits" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <TextBlock VerticalAlignment="Center" Text="{Binding SubredditListHeader}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
                 <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
-                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
+                <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding IsLoading}" />
             </StackPanel>
 
             <StackPanel Grid.Row="1">
                 <TextBlock Style="{StaticResource BasicTextStyle}" Text="Quick Navigate" />
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                    <TextBox Width="300" Margin="0,0,15,0"/>
+                    <TextBox Width="300" Margin="0,0,15,0" Text="{Binding QuickNavText}"/>
                     <Button Content="Go!" />
                 </StackPanel>
                 <TextBlock Text="Most Popular Subreddits" FontSize="20" Style="{StaticResource GroupHeaderTextStyle}"/>
