--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
+    xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -18,18 +19,18 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" Text="{Binding SubredditListHeader}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <TextBlock VerticalAlignment="Center" Text="subreddits" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
                 <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
                 <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding IsLoading}" />
             </StackPanel>
 
             <StackPanel Grid.Row="1">
-                <TextBlock Style="{StaticResource BasicTextStyle}" Text="Quick Navigate" />
+                <TextBlock Style="{StaticResource BasicTextStyle}" Text="{StaticResource QuickNav_Header}" />
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                    <TextBox Width="300" Margin="0,0,15,0" Text="{Binding QuickNavText}"/>
+                    <lctrls:CueTextBox Width="300" Margin="0,0,15,0" Text="{Binding QuickNavText}" CueText="{StaticResource QuickNav_CueText}"/>
                     <Button Content="Go!" />
                 </StackPanel>
-                <TextBlock Text="Most Popular Subreddits" FontSize="20" Style="{StaticResource GroupHeaderTextStyle}"/>
+                <TextBlock Text="{Binding SubredditListHeader}" FontSize="20" Style="{StaticResource GroupHeaderTextStyle}"/>
             </StackPanel>
 
             <Grid Grid.Row="2">
