Fancy Post Display Up and Running

--- a/RedditStoreApp/Common/Brushes.xaml
+++ b/RedditStoreApp/Common/Brushes.xaml
@@ -14,4 +14,6 @@
     <SolidColorBrush x:Key="MainBackgroundBrush" Color="White" />
     <SolidColorBrush x:Key="DarkBackgroundBrush" Color="{StaticResource RedditDarkBackground}" />
 	<SolidColorBrush x:Key="SelectionBrush" Color="{StaticResource RedditOrange}" />
+    <SolidColorBrush x:Key="UpvoteBrush" Color="{StaticResource RedditOrange}" />
+    <SolidColorBrush x:Key="DownvoteBrush" Color="{StaticResource RedditDarkBlue}" />
 </ResourceDictionary>
