--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -38,10 +38,70 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </Grid>
-            <ListView Grid.Row="1" ItemsSource="{Binding CurrentSubreddit.Posts}" SelectedItem="{Binding CurrentSubreddit.SelectedPost, Mode=TwoWay}" ItemContainerStyle="{StaticResource RedditListViewItem}">
+            <!-- Poor man's Design View -->
+            <!--<Grid Grid.Row="1" Margin="15,5,15,5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="As of August 2012, Google's driverless cars have driven for over 300k miles. Only two accidents were reported during that time, and they both were at the fault of the human driver that hit them." />
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="1234" Foreground="{StaticResource UpvoteBrush}"/>
+                    <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="324" Foreground="{StaticResource DownvoteBrush}"/>
+                    <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                        <TextBlock.RenderTransform>
+                            <RotateTransform Angle="180"/>
+                        </TextBlock.RenderTransform>
+                    </TextBlock>
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="24"/>
+                    <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                     <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>                  
+                    <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="wastingtime1"/>                   
+                </StackPanel>
+                <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>                   
+                    <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="i.imgur.com"/>
+                </StackPanel>
+            </Grid>-->
+            <ListView Width="Auto" Grid.Row="1" ItemsSource="{Binding CurrentSubreddit.Posts}" SelectedItem="{Binding CurrentSubreddit.SelectedPost, Mode=TwoWay}" ItemContainerStyle="{StaticResource RedditListViewItem}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Title}"/>
+                        <Grid Margin="15,5,15,5" Width="380">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="{Binding Title}" />
+                            <Grid></Grid>
+                            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
+                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                                <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
+                                    <TextBlock.RenderTransform>
+                                        <RotateTransform Angle="180"/>
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>
+                                <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CommentCount}"/>
+                                <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
+                            </StackPanel>
+                            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                                <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
+                            </StackPanel>
+                            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                                <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="2 hours ago via"/>
+                                <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
