--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="RedditStoreApp.View.LinkListView"
+    x:Class="RedditStoreApp.Views.LinkListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
