--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="RedditStoreApp.View.SubredditListView"
+    x:Class="RedditStoreApp.Views.SubredditListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
