--- a/RedditStoreApp/Common/ThemeStyles.xaml
+++ b/RedditStoreApp/Common/ThemeStyles.xaml
@@ -1,11 +1,18 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:fusao="using:Fusao.Controls"
     xmlns:local="using:RedditStoreApp.Common">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Brushes.xaml" />
         <ResourceDictionary Source="StandardStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
+    <Style x:Key="BasicDateTextStyle" TargetType="fusao:ApproximateDateBlock">
+        <Setter Property="Foreground" Value="{StaticResource ApplicationForegroundThemeBrush}"/>
+        <Setter Property="FontSize" Value="{StaticResource ControlContentThemeFontSize}"/>
+        <Setter Property="FontFamily" Value="{StaticResource ContentControlThemeFontFamily}"/>
+    </Style>
 
     <Style x:Key="SettingsBackButtonStyle" TargetType="Button">
         <Setter Property="MinWidth" Value="0"/>
