--- a/RedditStoreApp/Views/LinkListView.xaml
+++ b/RedditStoreApp/Views/LinkListView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
+    xmlns:fusao="using:Fusao.Controls"
     xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:converters="using:RedditStoreApp.View.Converters"
     xmlns:selectors="using:RedditStoreApp.Views.Selectors"
@@ -102,7 +103,7 @@
             </Grid.RowDefinitions>
             <Grid Height="60" Margin="0,0,0,20">
                 <StackPanel Orientation="Horizontal">
-                    <lctrls:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="{Binding IsLeft}" />
+                    <fusao:RotateButton Margin="0,0,15,0" Command="{Binding BackArrowPress}" IsRotated="{Binding IsLeft}" />
                     <TextBlock VerticalAlignment="Center" Text="{Binding CurrentSubreddit.DisplayName}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
                     <!--<TextBlock Text="{Binding Description}" Style="{StaticResource TitleTextStyle}"/>-->
                     <ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.IsLoading}" />
