--- a/RedditStoreApp/Views/SubredditListView.xaml
+++ b/RedditStoreApp/Views/SubredditListView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.View"
+    xmlns:fusao="using:Fusao.Controls"
     xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -27,7 +28,7 @@
             <StackPanel Grid.Row="1">
                 <TextBlock Style="{StaticResource BasicTextStyle}" Text="{StaticResource QuickNav_Header}" />
                 <StackPanel Orientation="Horizontal" Margin="0,0,0,15">
-                    <lctrls:CueTextBox Width="300" Margin="0,0,15,0" Text="{Binding QuickNavText, Mode=TwoWay}" CueText="{StaticResource QuickNav_CueText}"/>
+                    <fusao:CueTextBox Width="300" Margin="0,0,15,0" Text="{Binding QuickNavText, Mode=TwoWay}" CueText="{StaticResource QuickNav_CueText}"/>
                     <Button Content="Go!" Command="{Binding QuickNavigate}"/>
                 </StackPanel>
                 <TextBlock Text="{Binding SubredditListHeader}" FontSize="20" Style="{StaticResource GroupHeaderTextStyle}"/>
