--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -19,7 +19,7 @@
     </Page.Resources>
 
     <Grid Width="{Binding ActualWidth, ElementName=_page}" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Visibility="{Binding CurrentSubreddit.SelectedPost, Converter={StaticResource NullVisibilityConverter}}" Background="Aqua" Margin="20,10,20,10">
+        <Grid Visibility="{Binding CurrentPost, Converter={StaticResource NullVisibilityConverter}}" Background="Aqua" Margin="20,10,20,10">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -27,39 +27,40 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <fusao:RotateButton Margin="0,0,15,0" Command="{Binding CurrentSubreddit.SelectedPost.ChangeView}" IsRotated="{Binding CurrentSubreddit.SelectedPost.IsShowingComments}" IsVertical="True"/>
+                <fusao:RotateButton Margin="0,0,15,0" Command="{Binding CurrentPost.ChangeView}" IsRotated="{Binding CurrentPost.IsShowingComments}" IsVertical="True"/>
 
-                <TextBlock Grid.Column="1" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding CurrentSubreddit.SelectedPost.Title}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
-                <!--<ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentSubreddit.SelectedPost.IsLoading}" />-->
+                <TextBlock Grid.Column="1" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding CurrentPost.Title}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
+                <!--<ProgressRing VerticalAlignment="Center" Margin="10,15,0,0" Foreground="Black" Width="20" Height="20" IsActive="{Binding CurrentPost.IsLoading}" />-->
 
                 <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
-                    <fusao:ApproximateDateBlock Width="130" TextAlignment="Right" Margin="0,0,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentSubreddit.SelectedPost.Created}" />
+                    <fusao:ApproximateDateBlock Width="130" TextAlignment="Right" Margin="0,0,0,1" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding CurrentPost.Created}" />
                     <TextBlock Margin="2,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via "/>
-                    <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentSubreddit.SelectedPost.Domain}"/>
+                    <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentPost.Domain}"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-                    <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                    <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
                     <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
-                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
                     <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
                         <TextBlock.RenderTransform>
                             <RotateTransform Angle="180"/>
                         </TextBlock.RenderTransform>
                     </TextBlock>
-                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.CommentCount}"/>
+                    <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.CommentCount}"/>
                     <TextBlock Margin="5,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE200;"/>
 
                     <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                    <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentSubreddit.SelectedPost.Author}" Height="22" VerticalAlignment="Top"/>
+                    <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Author}" Height="22" VerticalAlignment="Top"/>
                 </StackPanel>
 
                 <Border Grid.Column="1" Grid.Row="3" Background="Beige" BorderBrush="Pink">
-                    <TextBlock TextWrapping="Wrap" Visibility="{Binding CurrentSubreddit.SelectedPost.IsSelf, Converter={StaticResource VisibilityConverter}}"  Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentSubreddit.SelectedPost.SelfText}"/>
+                    <TextBlock TextWrapping="Wrap" Visibility="{Binding CurrentPost.IsSelf, Converter={StaticResource VisibilityConverter}}"  Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
                 </Border>
             </Grid>
 
